--- a/views/data.tt
+++ b/views/data.tt
@@ -5,7 +5,6 @@
 [% ELSE %]
     <h1>All data</h1>
 [% END %]
-<p>
     <div class="row">
         <div class="col-md-6">
             <div class="btn-toolbar" role="toolbar">
@@ -38,7 +37,7 @@
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                             View <span class="caret"></span>
                     </button>
-                    <ul id="menu_view" class="dropdown-menu scrollable-menu" role="menu" aria-labelledby="drop_view">
+                    <ul id="menu_view" class="dropdown-menu scrollable-menu" role="menu">
                         [% IF user.permission.view_create %]
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="/view/0">Create new view</a></li>
                         [% END %]
@@ -79,7 +78,7 @@
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                             Action <span class="caret"></span>
                     </button>
-                    <ul id="menu_action" class="dropdown-menu" role="menu" aria-labelledby="drop_action">
+                    <ul id="menu_action" class="dropdown-menu" role="menu">
                         [% IF user_can_create %]
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="/edit/">New record</a></li>
                         [% END %]
@@ -123,7 +122,6 @@
             </div>
         [% END %]
     </div>
-</p>
 [% IF viewtype == "graph" %]
     [% INCLUDE 'data_graph.tt' %]
 [% ELSIF viewtype == "calendar" %]
