Issues #300, #301, #302, #303: search controls accessibility

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1257,3 +1257,19 @@ button.close {
     top: -2.7em;
     right: -5em;
 }
+
+/* search form */
+
+form[role="search"] ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+form[role="search"] button {
+    vertical-align: bottom;
+}
+
+form#clear_search {
+    display: inline;
+}
