--- a/views/data.tt
+++ b/views/data.tt
@@ -1,5 +1,12 @@
 [% IF search %]
-    <h1>Search results <small>[% search | html_entity %]</small></h1>
+    <h1>
+        Search results <small>for term "[% search | html_entity %]"</small>
+        <form id="clear_search" action="/data" method="get">
+            <button type="submit" name="clear" value="clear" class="btn btn-default">
+            Clear <span class="visually-hidden">search results</span>
+            </button>
+        </form>
+    </h1>
 [% ELSIF v %]
     <h1>[% v.name | html_entity %]</h1>
 [% ELSE %]
