--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -137,12 +137,16 @@
                             </ul>
                             [% IF page == "data" OR page == "index" OR page == "record" %]
                                 [% UNLESS session.rewind %]
-                                    <form class="navbar-form navbar-left" role="search" action="/data" method="post">
-                                        <div class="form-group">
-                                            <input type="text" name="search_text" class="form-control" title="Use * as a wildcard character" placeholder="Use * as wildcard" value="[% search | html_entity %]">
-                                        </div>
+                                    <form class="navbar-form navbar-left" role="search" action="/data" method="get">
+                                        <ul class="form-group">
+                                            <li>
+                                                <label for="search_text">Search (use * as wildcard):</label>
+                                            </li>
+                                            <li>
+                                                <input id="search_text" type="text" name="search_text" class="form-control" value="[% search | html_entity %]">
+                                            </li>
+                                        </ul>
                                         <button type="submit" name="search" value="search" class="btn btn-default">Search</button>
-                                        <button type="submit" name="clear" value="clear" class="btn btn-default">Clear</button>
                                     </form>
                                 [% END %]
                             [% END %]
