Make sure clear_search paramter gets handled properly

--- a/views/data.tt
+++ b/views/data.tt
@@ -1,8 +1,8 @@
 [% IF search %]
     <h1>
         Search results <small>for term "[% search | html_entity %]"</small>
-        <form id="clear_search" action="/data" method="get">
-            <button type="submit" name="clear" value="clear" class="btn btn-default">
+        <form id="clear_search" action="/data" method="post">
+            <button type="submit" name="clear_search" value="clear_search" class="btn btn-default">
             Clear <span class="visually-hidden">search results</span>
             </button>
         </form>
