--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1260,14 +1260,8 @@ button.close {
 
 /* search form */
 
-form[role="search"] ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-form[role="search"] button {
-    vertical-align: bottom;
+form[role="search"] {
+    padding: 1em;
 }
 
 form#clear_search {
