--- a/views/data.tt
+++ b/views/data.tt
@@ -101,6 +101,7 @@
                         [% END %]
                     </ul>
                 </div>
+                [% PROCESS search_form.tt %]
                 [% IF viewtype == "timeline" %]
                     <div class="btn-group">
                         <a class="btn btn-default" data-toggle="modal" data-target="#modal_timeline" role="button">Timeline options...</a>
