--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -666,37 +666,75 @@ select.input-group-sm>.form-control,select.input-group-sm>.input-group-addon,sel
                         margin-left:0;
         }
 }
+
 .navbar-default {
         background-color:#ffffff;
         border-color:#ffffff;
 }
+
 .navbar-default .navbar-brand {
         color:#000000;
         font-size:22px;
         font-weight:100;
 }
-.navbar-default .navbar-brand:hover,.navbar-default .navbar-brand:focus {
+
+.navbar-default .navbar-brand:hover,i
+.navbar-default .navbar-brand:focus {
         color:#000000;
 }
-.navbar-default .navbar-nav>li>a {
+
+.navbar-default li {
+    padding-right: .2em;
+}
+
+.navbar-default .navbar-nav > li > a {
         color:#000000;
 }
-.navbar-default .navbar-nav>li>a:hover,.navbar-default .navbar-nav>li>a:focus {
-        color:#33c2df;
+
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+    outline: 2px solid #85bffd;
 }
-.navbar-default .navbar-nav>.active>a,.navbar-default .navbar-nav>.active>a:hover,.navbar-default .navbar-nav>.active>a:focus {
-        color:#33c2df;
+
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+    outline: 2px solid #85bffd;
 }
-.navbar-default .navbar-nav>.disabled>a,.navbar-default .navbar-nav>.disabled>a:hover,.navbar-default .navbar-nav>.disabled>a:focus {
+
+.navbar-default .navbar-nav > .disabled > a,
+.navbar-default .navbar-nav > .disabled > a:hover,
+.navbar-default .navbar-nav > .disabled > a:focus {
         color:#cccccc;
 }
-.navbar-default .navbar-collapse,.navbar-default .navbar-form {
+
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
         border-color:#ffffff;
 }
-.navbar-default .navbar-nav>.open>a,.navbar-default .navbar-nav>.open>a:hover,.navbar-default .navbar-nav>.open>a:focus {
+
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
         background-color:transparent;
         color:#33c2df;
 }
+
+#main-navbar .dropdown-toggle {
+    font-size: 22px;
+    border: 0;
+    line-height: 21px;
+    padding-top: 14.5px;
+    padding-bottom: 14.5px;
+    background-color: #fff;
+}
+
+
+#main-navbar .dropdown-toggle:focus,
+#main-navbar .dropdown-toggle:hover {
+    outline: 2px solid #85bffd;
+}
+
 @media (max-width:767px) {
         .navbar-default .navbar-nav .open .dropdown-menu>li>a {
                         color:#000000;
@@ -708,22 +746,35 @@ select.input-group-sm>.form-control,select.input-group-sm>.input-group-addon,sel
                         color:#33c2df;
                         background-color:transparent;
         }
+
+        .navbar-default li a,
+        .navbar-default .dropdown-toggle {
+            padding-right: 0;
+            padding-left: 0;
+            margin: .3em;
+        }
 }
+
 .navbar-default .navbar-link {
         color:#000000;
 }
+
 .navbar-default .navbar-link:hover {
         color:#33c2df;
 }
+
 .navbar-inverse .navbar-brand {
         color:#999999;
 }
+
 .navbar-inverse .navbar-text {
         color:#999999;
 }
+
 .navbar-inverse .navbar-nav>li>a {
         color:#999999;
 }
+
 @media (max-width:767px) {
         .navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
                         color:#999999;
