--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -108,7 +108,7 @@
                                 [% END %]
                                 [% IF user.permission.layout OR user.permission.useradmin OR user.permission.audit %]
                                     <li class="dropdown">
-                                    <button type="button" id="admin-menu" class="btn btn-default dropdown-toggle" 
+                                    <button type="button" id="admin-menu" class="dropdown-toggle" 
                                         data-toggle="dropdown" aria-controls="admin-menu-options" aria-expanded="false" aria-haspopup="true">
                                         <span>Admin menu</span>
                                         <span class="caret"></span>
@@ -138,7 +138,7 @@
                             <ul class="nav navbar-nav navbar-right">
                                 [% IF instances.size > 1 %]
                                     <li class="dropdown">
-                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-label="Table menu"
+                                    <button type="button" class="dropdown-toggle" data-toggle="dropdown" aria-label="Table menu"
                                         aria-expanded="false" aria-haspopup="true" aria-controls="table-menu">
                                         <span>[% instance_name | html_entity %]</span>
                                         <span class="caret"></span>
@@ -154,7 +154,7 @@
                                     </li>
                                 [% END %]
                                 <li class="dropdown">
-                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-label="User menu"
+                                <button type="button" class="dropdown-toggle" data-toggle="dropdown" aria-label="User menu"
                                     aria-expanded="false" aria-haspopup="true" aria-controls="user-menu">
                                     <span>[% user.value | html_entity %]</span>
                                     <span class="caret"></span>
