--- a/views/search_form.tt
+++ b/views/search_form.tt
@@ -1,7 +1,7 @@
 [% IF page == "data" OR page == "index" OR page == "record" %]
     [% UNLESS session.rewind %]
     <div class="btn-group search_container">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false" aria-controls="search_form">
+        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false" aria-controls="search_form" aria-haspopup="true">
             Search
         </button>
         <form id="search_form" class="dropdown-menu" role="search" action="/data" method="get">
