Improve contrast for search term

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1319,6 +1319,10 @@ form#clear_search {
     display: inline;
 }
 
+small.search_term {
+    color: #333;
+}
+
 /* new password */
 
 .app_welcome {
