Improve column write subroutines
This patch ensures that the whole column write is wrapped in a
transaction, so that any errors are properly called and dealt with. In
particular, the error messages from an enumval column are handled in a
much cleaner way.

--- a/views/layout.tt
+++ b/views/layout.tt
@@ -674,7 +674,7 @@ available permissions are detailed in the <a href="[% url.page %]/user/">Users m
                     <div class="request-row">
                     <div class="col-md-11">
                     <p>
-                    <input type="text" class="form-control" name="enumvalue">
+                    <input type="text" class="form-control" name="enumval">
                     </p>
                     </div>
                     <button type="button" class="close closeme pull-left">&times;</button>
