--- a/views/edit.tt
+++ b/views/edit.tt
@@ -517,6 +517,8 @@
                         [% END %]
                     [% ELSE %]
                         <input type="file" id="[% dispcol.id %]" name="[% "file" _ dispcol.id %]">
+                        [%# Ensure something gets sent back to show it's been displayed %]
+                        <input type="hidden" name="[% field %]">
                         [% IF editvalue.id %]
                             <p class="help-block">
                                 <input type="checkbox" name="[% field %]" value="[% editvalue.id %]" checked>Include file.
